# tts-gateway

./: .dockerignore  .env.example  .gitignore  CLIENT_GUIDE.md  DEPLOYMENT.example.md  Dockerfile  PROTOCOL.md  README.md  docker-compose.yml  pyproject.toml
cosyvoice_service/: Dockerfile  README.md  app.py  voices.json
scripts/: bootstrap_h20.sh  deploy_h20.sh  fix_vllm_voice_persistence.sh  probe_vllm_omini.sh  transcribe_trimmed.py  tts_client.py  upload_custom_voices.py  upload_voices.sh
tests/: conftest.py  run_e2e_real.py  stress_run.py  test_engine.py  test_http_openai_compat.py  test_routing.py  test_scheduler.py  test_sentence_buffer.py  test_session.py  test_ws_integration.py
tools/: tts_ui.html  tts_ui_server.py
tts_gateway/: __init__.py  app.py  engine.py  engine_routing.py  engine_vllm_omini.py  loops.py  protocol.py  scheduler.py  sentence_buffer.py  session.py
