[project]
name = "tts-gateway"
version = "0.1.0"
description = "WebSocket TTS gateway for vllm-omini / Fun-CosyVoice3"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tts_gateway*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
